# mis9_sim

./: .gitignore  CMakeLists.txt  README.md  mast-base.STL  package.xml  ring.wrl
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: gazebo.launch.py  gzserver.launch.py  sample.launch  sample.launch.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
models/: 3-2-1 Block.STL  3-2-1 block.wrl  COMMANDMAST - COMMANDMAST-1-1.STL  COMMANDMAST - MastBlockWithRods-1.STL  COMMANDMAST.SLDPRT  COMMANDMAST.STL  CommModule.SLDPRT  CommModuleWithAntenna.SLDASM  Command Mast.SLDPRT  CommsModule - CommModule-1.STL  CommsModule - FoldedDipoleAntenna-1.STL  FoldedDipoleAntenna.SLDPRT  LWallkush.STL  Mast.STL  MastAssembly - MastLights-1.STL  MastBlock.SLDPRT  MastBlockWithRods.SLDPRT  Pylon.STL  SPHERE.STL  commsmod.dae  dummyfile  launch_landingarea.wrl  lwallkush.wrl  mast.wrl  pylon.SLDPRT  pylon.STL  pylon.wrl  ring.SLDPRT  ring.STL  untitled.dae  wallKushSTL.SLDPRT  wallKushSTL.STL  wallkush.wrl
models/MODEL.20/: Drone 2 Assembled - Angled Leg-1 Leg-1-1.STL  (+25 more)
plugins/src/changeRedLightVisual/: CMakeLists.txt  ChangeLightVisual.cpp
scripts/: gazebo_ros_paths.py
src/: mast_motion.cpp  matt.cpp
wavegen/: a.out  output.csv  readme.txt  sim.cpp  sim_user.cpp  vectorfunctions.cpp  vectorfunctions.hpp  wavefunctions.cpp
wavegen_push_030820/: a.out  main.cpp  readme.txt  vectorfunctions.cpp  wavefunctions.hpp
worlds/: mis9.world  obst_coll.world  protosim.world
(+63 files in other folders)
